      of the subtomograms in the metadata viewers.
    - Analyze results now displays an auxiliar window with display options for the protocols initial volume,
      3d classification, and subtomos refine.
    - Improved Relion version detection by checking both the path and the conda environment name, ensuring
      either ends with relion-5.0.
    - Fix bug in pseudoSubtomograms2Star for 3D particles.
v4.0.1:
  Users:
    - Ensure that the pseudo-subtomograms of the initial model protocol have even dimensions.
    - Post-process: the FSC generated contain the path to the postprocess.star file.
    - CTF refinement and bayesian polishing: form adapted to admit FSC as input and get the postprocess.star
      file from it.
  Developers:
    - Fix in the convert transformation matrix for negative rotation angles.
    - Add binThreads and needsGpu to the protocols.
    - Replace the setup.py + requirements.txt files by the new pyproject.toml.
v4.0.0:
  Users:
    - Relion 5.0.
    - Adapted to scipion-em-relion deprecation of relion3.
    - Add warning preventing to set the box size and the cropped box size to the same value as it may cause an
      internal error in relion (Thanks to DSheperd).
  Developers:
    - Fix inspect in buildbot: Tkagg not set in wizard module.
    - Protocols CTF refine and Bayesian polising get the postprocess.star the introduced post-processed volume, as an
      extended attribute.
    - Fix convert for 3D particles in Relion 5.
    - Improve the validations in protocols autorefine and classify 3d.
v3.4.0:
  Note: this was supposed to be 3.3.0, but was published as 3.4.0
  Users:
    - After having performed a refine or classification of particles, fields _rlnLogLikeliContribution,
      _rlnMaxValueProbDistribution and _rlnNrOfSignificantSamples are registered, so they can be plotted versus the
      no. particles using the data viewer and used as quality control metrics.